--- a/src/copmonents/Navbar/NavbarFriends/NavbarFriend/NavbarFriend.module.css
+++ b/src/copmonents/Navbar/NavbarFriends/NavbarFriend/NavbarFriend.module.css
@@ -1,11 +1,17 @@
 .friend {
-  margin-right: 2px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 10px;
   margin-top: 20px;
-  font-weight: bold;
+  font-size: 12px;
 }
 
 .friend img {
   height: 50px;
   width: 50px;
   border-radius: 50%;
+}
+
+.friend span {
+  align-self: center;
 }
